--- a/wp-content/themes/fipradotcom/sass/navigation/_menus.scss
+++ b/wp-content/themes/fipradotcom/sass/navigation/_menus.scss
@@ -173,11 +173,19 @@ ul.anchor-links-list {
     &.hide-m { @include media($media__medium) { display:none; } }
 
     @include media(max-width $media__medium) {
-//      background-color: lighten($color__fipra-periwinkle, 10%);
-      &:not(.menu-title) { border-top:1px solid darken($color__fipra-light-gray, 5%); }
-      &.menu-title { display:block; padding:$v-rhythm * 0.5 0; cursor:pointer; }
-      a { display:block; padding:$v-rhythm * 0.5 0; }
-      i { position:absolute; right:0; top:6px; }
+
+      &:not(.menu-title) { border-top:1px solid rgba(white, 0.4); }
+      &.menu-title { display:block; padding:$v-rhythm * 0.25 em(8px); }
+      &.menu-title-toggle { cursor:pointer; }
+      a { display: block; padding: $v-rhythm * 0.5 em(8px); }
+      i { position:absolute; right:em(8px); top:6px; }
+
+      &.inline-s {
+        display:inline;
+        &:not(.menu-title) { border-top:0px solid rgba(white, 0.4); }
+        a { display:inline-block; padding: $v-rhythm * 0.25 em(8px); }
+        i { position: static; }
+      }
     }
 
     @include media($media__medium) {
@@ -202,36 +210,57 @@ ul.anchor-links-list {
   }
 }
 
-.filter-list-container {
-  position:relative;
+.filter-group-container {
 
-  .filter-list-title {
-    margin:0; cursor:pointer;
-    i { position:absolute; right:0; top:0; }
-    @include media($media__medium) { margin:0; i { display:none; } }
+  .filter-group {
+    .filter-group-close {
+      position: absolute;
+      top:$v-rhythm;
+      right:0;
+      color:white;
+      cursor:pointer;
+      @include font-size(18);
+      &:before {
+        content: '\f02b';
+        font-family: "iconfonts";
+        speak:none;
+      }
+    }
   }
-  ul.filter-list {
-    @extend .anchor-links-list;
-    li {
-      margin-left:0 !important;
-      border-top:0 !important;
-      float:left;
 
-      .filter {
-        display:inline-block !important;
-        height: auto;
-        margin: $v-rhythm * 0.5 em(8px) $v-rhythm * 0.5 0;
-        margin-right: em(8px);
-        display: block; padding: $v-rhythm; line-height: $v-rhythm * 1.5; border: 1px solid rgba(white, 0.1);
-        &:hover { border: 1px solid rgba(white, 0.4); }
+  .filter-list-container {
+    position:relative;
+    padding-right:32px;
 
-        &.active {
-          background-color:white;
-          color:$color__fipra-blue-gray;
+    .filter-list-title {
+      margin:0; cursor:pointer;
+      i { position:absolute; right:0; top:0; }
+      @include media($media__medium) { margin:0; i { display:none; } }
+    }
+    ul.filter-list {
+      @extend .anchor-links-list;
+
+      li {
+        margin-left:0 !important;
+        border-top:0 !important;
+        float:left;
+
+        .filter {
+          display:inline-block !important;
+          height: auto;
+          margin: $v-rhythm * 0.5 em(8px) $v-rhythm * 0.5 0;
+          margin-right: em(8px);
+          @include font-size(13);
+          display: block; padding: $v-rhythm * 0.5; line-height: $v-rhythm * 1.5; border: 1px solid rgba(white, 0.2);
+          &:hover { border: 1px solid rgba(white, 0.6); }
+
+          &.active {
+            background-color:white;
+            color:$color__fipra-blue-gray;
+          }
         }
       }
     }
-
   }
 
 }
