--- a/wp-content/themes/fipradotcom/sass/pages/_our-people.scss
+++ b/wp-content/themes/fipradotcom/sass/pages/_our-people.scss
@@ -2,13 +2,22 @@
   .full-width-block-content { padding-top: $v-rhythm; padding-bottom: $v-rhythm; }
 
   @include media($media__large) {
-    .full-width-block-content { padding-top: $v-rhythm * 2; padding-bottom: $v-rhythm * 2; }
+    .full-width-block-content { padding-top: $v-rhythm * 3; padding-bottom: $v-rhythm * 3; }
   }
 }
 
 .site-content-our-people {
 
-  .people-group {
+  .people-group-container {
+    height:440px;
+    overflow: scroll;
+    padding-right:em(6px);
+    @include media($media__medium) {
+      height:860px;
+    }
+
+    .people-group {
+    }
 //    font-size: 0.1px; /* IE 9 & 10 don't like font-size: 0; */
 
     @include media($media__medium) {
@@ -29,7 +38,7 @@
       margin-bottom:$v-rhythm;
       border-bottom:2px solid darken(white, 10%);
 
-      @include media($media__medium) { display:inline-block; width:33.3333333%; height:270px; border-left:3px solid $color__fipra-lighter-gray; border-right:3px solid $color__fipra-lighter-gray; }
+      @include media($media__medium) { display:inline-block; width:33.3333333%; height:270px; border-left:5px solid $color__fipra-lighter-gray; border-right:5px solid $color__fipra-lighter-gray; }
 
       @include media($media__large) { width:25%; }
 
@@ -123,8 +132,10 @@
 }
 
 .filter-group {
-  border-top:1px solid darken($color__fipra-dark-gray, 5%);
   &.hide { display:none; }
+  &.grey {
+    border-top:1px solid lighten($color__fipra-blue-gray, 8%);
+  }
 }
 
 .filtering-on-container {
