--- a/wp-content/themes/fipradotcom/style.css
+++ b/wp-content/themes/fipradotcom/style.css
@@ -3870,11 +3870,11 @@ ul.anchor-links-list, .filter-group-container .filter-list-container ul.filter-l
         ul.anchor-links-list li a, .filter-group-container .filter-list-container ul.filter-list li a {
           display: inline-block;
           padding: 0.375rem 0.75em;
-          border-bottom: 4px solid transparent; }
+          border-bottom: 3px solid transparent; }
           ul.anchor-links-list li a:hover, .filter-group-container .filter-list-container ul.filter-list li a:hover {
-            border-bottom: 4px solid #5c6882; } }
+            border-bottom: 3px solid #5c6882; } }
     ul.anchor-links-list li a.active, .filter-group-container .filter-list-container ul.filter-list li a.active {
-      background-color: #343e53;
+      background-color: #3e4a62;
       font-weight: 700; }
 
 .filter-group-container .filter-group .filter-group-close {
@@ -4614,132 +4614,139 @@ embed, iframe, object {
   padding-bottom: 0.75rem; }
 @media screen and (min-width: 1200px) {
   .our-people .full-width-block-content {
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem; } }
+    padding-top: 2.25rem;
+    padding-bottom: 2.25rem; } }
 
-@media screen and (min-width: 769px) {
-  .site-content-our-people .people-group {
-    text-align: justify; }
-    .site-content-our-people .people-group:after {
-      display: inline-block;
-      width: 100%;
-      content: ''; } }
-.site-content-our-people .people-group .person {
-  position: relative;
-  text-align: left;
-  overflow: hidden;
-  width: 100%;
-  background-color: white;
-  margin-bottom: 0.75rem;
-  border-bottom: 2px solid #e6e6e6; }
+.site-content-our-people .people-group-container {
+  height: 440px;
+  overflow: scroll;
+  padding-right: 0.375em; }
   @media screen and (min-width: 769px) {
-    .site-content-our-people .people-group .person {
-      display: inline-block;
-      width: 33.33333%;
-      height: 270px;
-      border-left: 3px solid #eceef2;
-      border-right: 3px solid #eceef2; } }
-  @media screen and (min-width: 1200px) {
-    .site-content-our-people .people-group .person {
-      width: 25%; } }
-  .site-content-our-people .people-group .person h4 {
-    font-size: 18px;
-    font-size: 1.125rem;
-    font-weight: 700;
-    line-height: 1.5rem !important; }
-  .site-content-our-people .people-group .person h6 {
-    margin: 0;
-    line-height: 1.3125rem !important; }
-  .site-content-our-people .people-group .person .person-profile-photo {
-    line-height: 1 !important;
-    max-height: 95%;
-    text-align: center;
-    line-height: 0.75rem; }
-    @media screen and (max-width: 481px)  {
-      .site-content-our-people .people-group .person .person-profile-photo {
-        display: none !important; } }
-    @media screen and (min-width: 481px) and (max-width: 769px)  {
-      .site-content-our-people .people-group .person .person-profile-photo {
-        width: 20%;
-        float: left; }
-        .site-content-our-people .people-group .person .person-profile-photo img {
-          max-width: 90%;
-          margin-bottom: 0; } }
-    @media screen and (min-width: 769px) {
-      .site-content-our-people .people-group .person .person-profile-photo {
-        background-color: #eceef2; }
-        .site-content-our-people .people-group .person .person-profile-photo img {
-          max-width: 90%;
-          margin-bottom: 0; } }
-    .site-content-our-people .people-group .person .person-profile-photo:hover {
-      opacity: 0.7; }
-  .site-content-our-people .people-group .person .person-details {
-    padding: 0.75rem 4.375em 0.75rem 0.5em; }
-    @media screen and (min-width: 481px) and (max-width: 769px)  {
-      .site-content-our-people .people-group .person .person-details {
-        width: 80%;
-        float: left;
-        padding: 0.75rem 1.875em 0.75rem 0.5em; } }
-    @media screen and (min-width: 769px) {
-      .site-content-our-people .people-group .person .person-details {
-        padding: 0.5625rem 0.75rem;
-        position: absolute;
-        top: 180px;
-        left: 0;
-        background-color: white;
-        height: 100%;
+    .site-content-our-people .people-group-container {
+      height: 860px; } }
+  @media screen and (min-width: 769px) {
+    .site-content-our-people .people-group-container {
+      text-align: justify; }
+      .site-content-our-people .people-group-container:after {
+        display: inline-block;
         width: 100%;
-        -webkit-transition: all 0.5s;
-        transition: all 0.5s; }
-        .site-content-our-people .people-group .person .person-details:hover {
-          top: 0;
-          background-color: #3e4a62;
-          color: #d4d8e1; }
-          .site-content-our-people .people-group .person .person-details:hover a {
-            color: white; }
-            .site-content-our-people .people-group .person .person-details:hover a:hover {
-              color: #d4d8e1; }
-          .site-content-our-people .people-group .person .person-details:hover .person-contact-details {
-            display: block; } }
+        content: ''; } }
+  .site-content-our-people .people-group-container .person {
+    position: relative;
+    text-align: left;
+    overflow: hidden;
+    width: 100%;
+    background-color: white;
+    margin-bottom: 0.75rem;
+    border-bottom: 2px solid #e6e6e6; }
+    @media screen and (min-width: 769px) {
+      .site-content-our-people .people-group-container .person {
+        display: inline-block;
+        width: 33.33333%;
+        height: 270px;
+        border-left: 5px solid #eceef2;
+        border-right: 5px solid #eceef2; } }
     @media screen and (min-width: 1200px) {
-      .site-content-our-people .people-group .person .person-details {
-        top: 170px; } }
-    .site-content-our-people .people-group .person .person-details .btn-container {
-      position: absolute;
-      top: 0;
-      right: 0.375em;
-      height: 100%; }
+      .site-content-our-people .people-group-container .person {
+        width: 25%; } }
+    .site-content-our-people .people-group-container .person h4 {
+      font-size: 18px;
+      font-size: 1.125rem;
+      font-weight: 700;
+      line-height: 1.5rem !important; }
+    .site-content-our-people .people-group-container .person h6 {
+      margin: 0;
+      line-height: 1.3125rem !important; }
+    .site-content-our-people .people-group-container .person .person-profile-photo {
+      line-height: 1 !important;
+      max-height: 95%;
+      text-align: center;
+      line-height: 0.75rem; }
+      @media screen and (max-width: 481px)  {
+        .site-content-our-people .people-group-container .person .person-profile-photo {
+          display: none !important; } }
+      @media screen and (min-width: 481px) and (max-width: 769px)  {
+        .site-content-our-people .people-group-container .person .person-profile-photo {
+          width: 20%;
+          float: left; }
+          .site-content-our-people .people-group-container .person .person-profile-photo img {
+            max-width: 90%;
+            margin-bottom: 0; } }
       @media screen and (min-width: 769px) {
-        .site-content-our-people .people-group .person .person-details .btn-container {
-          display: none; } }
-      .site-content-our-people .people-group .person .person-details .btn-container .btn {
-        display: table;
-        background-color: transparent;
-        height: 100%;
-        padding: 0 0.75em;
-        border: 0; }
-        .site-content-our-people .people-group .person .person-details .btn-container .btn .btn-text {
+        .site-content-our-people .people-group-container .person .person-profile-photo {
+          background-color: #eceef2; }
+          .site-content-our-people .people-group-container .person .person-profile-photo img {
+            max-width: 90%;
+            margin-bottom: 0; } }
+      .site-content-our-people .people-group-container .person .person-profile-photo:hover {
+        opacity: 0.7; }
+    .site-content-our-people .people-group-container .person .person-details {
+      padding: 0.75rem 4.375em 0.75rem 0.5em; }
+      @media screen and (min-width: 481px) and (max-width: 769px)  {
+        .site-content-our-people .people-group-container .person .person-details {
+          width: 80%;
+          float: left;
+          padding: 0.75rem 1.875em 0.75rem 0.5em; } }
+      @media screen and (min-width: 769px) {
+        .site-content-our-people .people-group-container .person .person-details {
+          padding: 0.5625rem 0.75rem;
+          position: absolute;
+          top: 180px;
+          left: 0;
+          background-color: white;
           height: 100%;
-          display: table-cell;
-          vertical-align: middle; }
-    .site-content-our-people .people-group .person .person-details .person-contact-details {
-      display: none;
-      -webkit-animation: fadeIn 1s;
-      animation: fadeIn 1s;
-      margin-top: 0.75rem;
-      font-size: 14px;
-      font-size: 0.875rem;
-      line-height: 1.125rem;
-      overflow: hidden;
-      word-break: break-all;
-      word-wrap: break-word; }
-      .site-content-our-people .people-group .person .person-details .person-contact-details table tr td {
-        padding: 0.1875rem 0; }
+          width: 100%;
+          -webkit-transition: all 0.5s;
+          transition: all 0.5s; }
+          .site-content-our-people .people-group-container .person .person-details:hover {
+            top: 0;
+            background-color: #3e4a62;
+            color: #d4d8e1; }
+            .site-content-our-people .people-group-container .person .person-details:hover a {
+              color: white; }
+              .site-content-our-people .people-group-container .person .person-details:hover a:hover {
+                color: #d4d8e1; }
+            .site-content-our-people .people-group-container .person .person-details:hover .person-contact-details {
+              display: block; } }
+      @media screen and (min-width: 1200px) {
+        .site-content-our-people .people-group-container .person .person-details {
+          top: 170px; } }
+      .site-content-our-people .people-group-container .person .person-details .btn-container {
+        position: absolute;
+        top: 0;
+        right: 0.375em;
+        height: 100%; }
+        @media screen and (min-width: 769px) {
+          .site-content-our-people .people-group-container .person .person-details .btn-container {
+            display: none; } }
+        .site-content-our-people .people-group-container .person .person-details .btn-container .btn {
+          display: table;
+          background-color: transparent;
+          height: 100%;
+          padding: 0 0.75em;
+          border: 0; }
+          .site-content-our-people .people-group-container .person .person-details .btn-container .btn .btn-text {
+            height: 100%;
+            display: table-cell;
+            vertical-align: middle; }
+      .site-content-our-people .people-group-container .person .person-details .person-contact-details {
+        display: none;
+        -webkit-animation: fadeIn 1s;
+        animation: fadeIn 1s;
+        margin-top: 0.75rem;
+        font-size: 14px;
+        font-size: 0.875rem;
+        line-height: 1.125rem;
+        overflow: hidden;
+        word-break: break-all;
+        word-wrap: break-word; }
+        .site-content-our-people .people-group-container .person .person-details .person-contact-details table tr td {
+          padding: 0.1875rem 0; }
 
-.filter-group {
-  border-top: 1px solid #343e53; }
-  .filter-group.hide {
-    display: none; }
+.filter-group.hide {
+  display: none; }
+.filter-group.grey {
+  border-top: 1px solid #6e7b99; }
 
 .filtering-on-container {
   position: relative;
