--- a/wp-content/themes/fipradotcom/sass/pages/_our-people.scss
+++ b/wp-content/themes/fipradotcom/sass/pages/_our-people.scss
@@ -1,5 +1,5 @@
 .our-people {
-  .full-width-block-content { padding-top: $v-rhythm; padding-bottom: $v-rhythm; }
+  .full-width-block-content { padding-top: $v-rhythm * 2; padding-bottom: $v-rhythm; }
 
   @include media($media__large) {
     .full-width-block-content { padding-top: $v-rhythm * 3; padding-bottom: $v-rhythm * 3; }
@@ -11,10 +11,11 @@
   .people-group-container {
     height:440px;
     overflow: scroll;
+    overflow-x:hidden;
+    overflow-y:scroll;
     padding-right:em(6px);
-    @include media($media__medium) {
-      height:860px;
-    }
+    @include media($media__medium) { height:580px; }
+    @include media($media__large) { height:540px; }
 
     .people-group {
     }
@@ -38,16 +39,18 @@
       margin-bottom:$v-rhythm;
       border-bottom:2px solid darken(white, 10%);
 
-      @include media($media__medium) { display:inline-block; width:33.3333333%; height:270px; border-left:5px solid $color__fipra-lighter-gray; border-right:5px solid $color__fipra-lighter-gray; }
+      @include media($media__medium) { display:inline-block; width:33.333333%; height:260px; border-left:8px solid $color__fipra-lighter-gray; border-right:8px solid $color__fipra-lighter-gray; }
 
-      @include media($media__large) { width:25%; }
+      @include media($media__medium-plus) { display:inline-block; width:25%; height:260px; border-left:8px solid $color__fipra-lighter-gray; border-right:8px solid $color__fipra-lighter-gray; }
+
+      @include media($media__large) { width:20%; height:260px; }
 
       h4 { @include font-size(18); font-weight:$font__bold; line-height: $v-rhythm * 2 !important; }
       h6 { margin:0; line-height:$v-rhythm * 1.75 !important; }
 
       .person-profile-photo {
         line-height:1 !important;
-        max-height:95%;
+        max-height:90%;
 
         @include media(max-width $media__small) { display: none !important; }
 
@@ -77,13 +80,15 @@
         @include media($media__medium) {
           padding:$v-rhythm * 0.75 rem(12px);
           position:absolute;
-          top:180px;
+          top:146px;
           left:0;
 
           background-color: white;
           height:100%;
           width:100%;
           @include transition(all 0.5s);
+
+          h4 { @include font-size(16); }
 
           &:hover {
             top:0;
@@ -94,7 +99,7 @@
           }
         }
 
-        @include media($media__large) { top:170px; }
+        @include media($media__large) { top:132px; }
 
         .btn-container {
           @include media($media__medium) { display: none; }
@@ -157,4 +162,10 @@
     }
   }
 
+}
+
+#text-filter {
+  margin:$v-rhythm * 0.75 0;
+  width:100%;
+  @include font-size(14);
 }
