--- a/wp-content/themes/fipradotcom/sass/variables-site/_structure.scss
+++ b/wp-content/themes/fipradotcom/sass/variables-site/_structure.scss
@@ -7,6 +7,7 @@ $container__content-width:1020px;
 $media__xxlarge: 1800px;
 $media__xlarge: 1500px;
 $media__large: 1200px;
+$media__medium-plus: 841px;
 $media__medium: 769px;
 $media__small: 481px;
 
