--- a/wp-content/themes/fipradotcom/sass/pages/_our-people.scss
+++ b/wp-content/themes/fipradotcom/sass/pages/_our-people.scss
@@ -39,14 +39,14 @@
       margin-bottom:$v-rhythm;
       border-bottom:2px solid darken(white, 10%);
 
-      @include media($media__medium) { display:inline-block; width:33.333333%; height:260px; border-left:8px solid $color__fipra-lighter-gray; border-right:8px solid $color__fipra-lighter-gray; }
+      @include media($media__medium) { display:inline-block; width:33.333333%; height:260px; border-left:5px solid $color__fipra-lighter-gray; border-right:5px solid $color__fipra-lighter-gray; }
 
-      @include media($media__medium-plus) { display:inline-block; width:25%; height:260px; border-left:8px solid $color__fipra-lighter-gray; border-right:8px solid $color__fipra-lighter-gray; }
+      @include media($media__medium-plus) { display:inline-block; width:25%; height:260px; }
 
       @include media($media__large) { width:20%; height:260px; }
 
-      h4 { @include font-size(18); font-weight:$font__bold; line-height: $v-rhythm * 2 !important; }
-      h6 { margin:0; line-height:$v-rhythm * 1.75 !important; }
+      h4 { @include font-size(18); font-weight:$font__bold; line-height: $v-rhythm * 1.5 !important; }
+      h6 { margin:0; line-height:$v-rhythm * 1.75 !important; font-weight: $font__normal; }
 
       .person-profile-photo {
         line-height:1 !important;
