--- a/wp-content/themes/fipradotcom/sass/pages/_careers.scss
+++ b/wp-content/themes/fipradotcom/sass/pages/_careers.scss
@@ -21,3 +21,7 @@
 .job-listing {
   p.lead { font-weight: $font__bold; }
 }
+
+.careers-content-area {
+  .owl-controls { text-align: left !important; }
+}
